--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "chalk": "^4.0.0",
     "debug": "^2.6.6",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "morgan": "^1.10.0"
   }
 }
