--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "DEBUG=* nodemon app.js",
+    "lint": "eslint app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,17 @@
     "debug": "^2.6.6",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
+  },
+  "nodeConfig":{
+    "restartable":"rs",
+    "ignore": ["node_modules/**/node_modules"],
+    "delay":"2500"
   }
 }
