--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-material-design": "^4.1.2",
+    "bootstrap3": "^3.3.5",
     "chalk": "^4.0.0",
     "debug": "^2.6.6",
     "ejs": "^3.0.2",
